# trinci3

./: .gitignore  Cargo.toml  README.md
test-utility/node_info_collector/: ask_height.sh  ask_height_local.sh  ip_addresses.txt  ip_addresses_local.txt
test-utility/tx-submitter/: Cargo.toml
test-utility/tx-submitter/src/: main.rs  tx_builder.rs
trinci-core-new/: Cargo.toml
trinci-core-new/src/: consts.rs  lib.rs  utils.rs
trinci-core-new/src/artifacts/: errors.rs  messages.rs  mod.rs  models.rs
trinci-core-new/src/crypto/: ecdsa.rs  ed25519.rs  hash.rs  identity.rs  mod.rs  tpm2.rs
trinci-core-new/src/services/: block_service.rs  consensus_service.rs  drand_service.rs  mod.rs  transaction_service.rs
trinci-mining-tool/: Cargo.toml  README.md
trinci-mining-tool/frontend/: .env  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
trinci-mining-tool/frontend/src/: App.vue  main.ts
trinci-mining-tool/frontend/src/assets/css/: style.css
trinci-mining-tool/frontend/src/components/: CopyToClipboard.vue  Loader.vue  TransitionFade.vue
trinci-mining-tool/frontend/src/components/Buttons/: ButtonDefault.vue
trinci-mining-tool/frontend/src/components/Cards/: DashboardCards.vue  NodeCards.vue
trinci-mining-tool/frontend/src/components/Charts/: ChartMining.vue  ChartMiningDetail.vue  ChartNetwork.vue  ChartUsage.vue
trinci-mining-tool/frontend/src/components/Forms/: SearchNodes.vue  SelectAllNodes.vue
trinci-mining-tool/frontend/src/components/Header/: DropdownUser.vue  HeaderArea.vue  NodeHeaderArea.vue
trinci-mining-tool/frontend/src/components/Nodes/: ConfigVisa.vue  NodeFound.vue
trinci-mining-tool/frontend/src/components/Progress/: ProgressOne.vue
trinci-mining-tool/frontend/src/components/Sidebar/: SidebarArea.vue  SidebarItem.vue
trinci-mining-tool/frontend/src/interceptor/: http.interceptor.ts
trinci-mining-tool/frontend/src/layouts/: BottomBarLayout.vue  DashboardLayout.vue  NodeLayout.vue  WizardLayout.vue
trinci-mining-tool/frontend/src/models/: index.ts  sidebar.ts
trinci-mining-tool/frontend/src/router/: index.ts
trinci-mining-tool/frontend/src/stores/: index.store.ts  node.ts  sidebar.ts  user.store.ts
trinci-mining-tool/frontend/src/utils/: trinci.ts  useAuthin.ts  utils.ts  wsClient.ts
trinci-mining-tool/frontend/src/views/: CheckStatus.vue  LoginView.vue
trinci-mining-tool/frontend/src/views/Dashboard/: HomeView.vue
trinci-mining-tool/frontend/src/views/Nodes/: NodeView.vue
trinci-mining-tool/frontend/src/views/Wizard/: Step1SetupView.vue  Step2SelectionView.vue
trinci-mining-tool/src/: endpoints.rs  main.rs  mining_service.rs  models.rs  socket_service.rs  update_service.rs
trinci-node/: Cargo.toml  README.md
trinci-node/data/bs/: README.md
trinci-node/data/kp/p2p_kp/: README.md
trinci-node/data/kp/trinci_kp/: README.md
trinci-node/src/: clap.rs  consts.rs  lib.rs  main.rs  utils.rs
trinci-node/src/artifacts/: db.rs  errors.rs  messages.rs  mod.rs  models.rs  rocks_db.rs
trinci-node/src/services/: core_interface.rs  db_service.rs  event_service.rs  indexer.rs  kafka_service.rs  mod.rs  p2p_service.rs  playground_interface.rs  rest_api.rs  rest_api_t2.rs  socket_service.rs  wasm_service.rs
trinci-node/src/services/wm/: host_func.rs  local.rs  mod.rs  wasm_machine.rs
trinci-node/src/wasm/: execute_tx_module.wasm
trinci-playground/: .gitignore  package-lock.json  package.json
trinci-playground/src/: App.vue  styles.css
trinci-playground/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
trinci-playground/src-tauri/src/: main.rs  messages.rs  panopticon.rs  tauri_interface.rs  utils.rs
