[package]
name = "tx_submitter"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
isahc = { version = "1", features = ["json"] }
log = "0.4"
rand = "0.8"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
ring = "0.17"
tide = "0.16"
trinci-core-new = { path = "../../trinci-core-new" }
trinci-node = { path = "../../trinci-node" }
